# pr-longterm

./: .gitignore  README.md  pyproject.toml
agent/: cognitive_agent.py  context_manager.py  controller.py  llm.py
api/: __init__.py  app.py
compression/: __init__.py  long_context.py  strategies.py
context/: __init__.py  context_builder.py  context_ranker.py  token_budget.py
docs/: architecture.md  implementation-status.md  roadmap.md
docs/adr/: 0001-memory-hierarchy-and-local-store.md
evaluation/: __init__.py  benchmarks.py  long_conversation_test.py  long_document_qa.py
experiments/: __init__.py  run_demo.py
memory/: __init__.py  archival_memory.py  episodic_memory.py  hierarchy.py  ingestion.py  manager.py  memory_consolidation.py  models.py  scoring.py  semantic_memory.py  store.py  working_memory.py
retrieval/: __init__.py  embedding.py  hybrid.py  query_rewrite.py  types.py
tests/: test_agent_controller.py  test_api.py  test_cognitive_agent.py  test_context_manager.py  test_document_ingestion.py  test_evaluation_benchmarks.py  test_hierarchical_memory_runtime.py  test_hybrid_retriever.py  test_long_context_compression.py  test_memory_consolidation.py  test_memory_scoring.py  test_memory_store.py  test_portfolio_modules.py  test_query_rewrite_and_graph_retrieval.py
