[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-memory-engine"
version = "0.1.0"
description = "Memory-augmented LLM system with hierarchical cognitive memory."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "numpy>=1.26.0,<3.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
]

[tool.setuptools]
packages = [
  "agent",
  "context",
  "memory",
  "retrieval",
  "compression",
  "evaluation",
  "experiments",
  "api",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--cov=agent --cov=memory --cov=retrieval --cov=compression --cov=evaluation --cov=api --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
